--- a/css/_organisms/_footers.scss
+++ b/css/_organisms/_footers.scss
@@ -78,6 +78,7 @@ footer:before {
       text-align: left;
     }
     .row {align-items: center;}
+    .row.fifty {padding: 0 1rem;}
     .logo {padding: 0 0 0.5rem;}
     .copyright.row {
       padding: 1rem 2rem 0;
