Update to Cards molecule page
Focus on just the card; card-row will be covered on Cards organism page

--- a/css/_molecules/_cards.scss
+++ b/css/_molecules/_cards.scss
@@ -40,6 +40,7 @@
           }
         }
       }
+      p cite a {display: inline;}
     }
     .text p a:hover span svg,
     .text p a:focus span svg {
