--- a/css/master.css
+++ b/css/master.css
@@ -1067,9 +1067,16 @@ blockquote {
     padding: 0 0 0.8rem;
     font-weight: 600; }
     blockquote p cite {
+      padding: 0.8rem 0 0;
       font-size: 0.8rem; }
   blockquote p:last-child {
     padding: 0; }
+
+blockquote.center {
+  margin: 2rem auto; }
+
+blockquote.right {
+  margin: 2rem 0 2rem auto; }
 
 blockquote:before {
   display: block;
