--- a/css/master.scss
+++ b/css/master.scss
@@ -5,6 +5,7 @@
 @import "_atoms/buttons";
 @import "_atoms/forms";
 
+@import "_molecules/accordions";
 @import "_molecules/banners";
 @import "_molecules/blockquotes";
 @import "_molecules/cards";
