--- a/css/master.scss
+++ b/css/master.scss
@@ -9,6 +9,7 @@
 @import "_molecules/banners";
 @import "_molecules/blockquotes";
 @import "_molecules/cards";
+@import "_molecules/messaging";
 @import "_molecules/navigation";
 
 @import "_organisms/footers";
