Card Groups and Media Block Grid pages added
Added 'figcaption' to card images; updated figcaption css rules for cards and media grid items

--- a/css/_global/_typography.scss
+++ b/css/_global/_typography.scss
@@ -181,3 +181,10 @@ img + figcaption {
   font-size: 0.8rem;
   text-transform: none;
 }
+
+img + figcaption > cite {
+  padding: 0.8rem 1rem;
+  font-size: 0.8rem;
+  font-style: normal;
+  text-transform: none;
+}
