--- a/css/_molecules/_cards.scss
+++ b/css/_molecules/_cards.scss
@@ -1,5 +1,5 @@
 // CARDS
-.card-row {
+.card-group {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,6 +17,14 @@
     border-radius: 0.25rem;
     figure {padding: 0;
       img {border-radius: 0.25rem 0.25rem 0 0;}
+      figcaption > cite {
+        display: inline-block;
+        padding: 0 1rem;
+        font-size: 0.8rem;
+        font-style: normal;
+        font-weight: $font-body-norm;
+        text-transform: none;
+      }
     }
     .text {
       padding: 1rem;
@@ -27,7 +35,7 @@
 }
 
 @media (min-width: 48rem) {
-  .card-row {
+  .card-group {
     flex-direction: row;
     align-items: stretch;
     flex-wrap: wrap;
@@ -37,7 +45,7 @@
 }
 
 @media (min-width: 64rem) {
-  .card-row {
+  .card-group {
     .card {width: calc(32.75% - 2rem);}
   }
 }
