--- a/css/_molecules/_media-grid-items.scss
+++ b/css/_molecules/_media-grid-items.scss
@@ -13,7 +13,17 @@
     width: 100%;
     margin: 0;
     padding: 1rem;
-    figure {padding: 0;}
+    figure {
+      padding: 0;
+      figcaption > cite {
+        display: inline-block;
+        padding: 0;
+        font-size: 0.8rem;
+        font-style: normal;
+        font-weight: $font-body-norm;
+        text-transform: none;
+      }
+    }
     .text {
       padding: 1rem 0 0;
       width: 100%;
@@ -37,21 +47,24 @@
     .media-grid-item {
       flex-direction: row;
       flex-wrap: wrap;
-      figure {
-        width: 35%;
-        img {border-radius: 0.25rem 0 0 0.25rem;}
-      }
+      align-items: flex-start;
+      figure {width: 35%;}
       .text {
         width: 65%;
-        padding: 1rem 0 1rem 2rem;
+        padding: 0 0 0 2rem;
       }
     }
     .media-grid-item.reverse {
       flex-direction: row-reverse;
-      figure {
-        img {border-radius: 0 0.25rem 0.25rem 0;}
-      }
-      .text {padding: 1rem 2rem 1rem 0;}
+      .text {padding: 0 2rem 0 0;}
     }
   }
+}
+
+@media (min-width: 90rem) {
+  .media-grid-block {
+    width: 75%;
+    margin: 0;
+  }
+  .media-grid-block.center {margin: 0 auto;}
 }
